carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_compact.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.ec2.Vpc vpc
        ├─ + awscc.ec2.RouteTable awscc_ec2_route_table_634bd335
        └─ + awscc.ec2.Subnet (availability_zone: ap-northeast-1a)

Plan: 3 to add, 0 to change, 0 to destroy.
