carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_composition_folding.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + aws.s3.Bucket logs
  + module "cluster" (./modules/cluster)
    + aws.eks.Cluster cluster/inner
    + aws.iam.Role cluster/inner-role

Plan: 3 to add, 0 to change, 0 to destroy.
