carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_default_tags.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.ec2.Vpc vpc
      cidr_block: "10.0.0.0/16"
      tags:
        Environment: "staging"
        Name: "main-vpc"
        │
        └─ + awscc.ec2.RouteTable awscc_ec2_route_table_634bd335
              vpc_id: vpc.vpc_id

Plan: 2 to add, 0 to change, 0 to destroy.
