carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_default_values.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.logs.LogGroup awscc_logs_log_group_4688f7ac
      log_group_name: "my-app-logs"
      retention_in_days: 30

Plan: 1 to add, 0 to change, 0 to destroy.
