carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_deferred_for.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + awscc.sso.Assignment (N records after orgs.accounts resolves)
      <- for account_id in orgs.accounts
      instance_arn: "arn:aws:sso:::instance/ssoins-12345"
      principal_id: "group-abc-123"
      principal_type: "GROUP"
      target_id: (known after orgs.accounts resolves)
      target_type: "AWS_ACCOUNT"

Plan: 0 to add, 0 to change, 0 to destroy.
       N to add after orgs.accounts resolves.
