carina-cli/src/snapshots/carina_cli__plan_snapshot_tests__snapshot_deferred_for_with_dependent_wait.snap
---
source: carina-cli/src/plan_snapshot_tests.rs
expression: output
---
Execution Plan:

  + aws.acm.Certificate cert
      domain_name: "registry.example.com"
      validation_method: "DNS"
        │
        └─ +/- aws.route53.RecordSet validation_records[*] (N records after cert applies)
              <- for opt in cert.domain_validation_options
              hosted_zone_id: "Z123"
              name: (known after cert applies)
              resource_records: (known after cert applies)
              ttl: 60
              type: (known after cert applies)
              │
              └─ + aws.acm.CertificateValidation aws_acm_certificate_validation_f73f417c
                    certificate_arn: "arn:aws:acm:us-east-1:123456789012:certificate/example"
                    validation_record_id: "known-after-validation-records"

Plan: 2 to add, 0 to change, 0 to destroy.
       N to replace after cert applies.
